[metadata]
name = cockcrow
summary = Scheduler System
author = Holger
author-email = xmuthad@163.com
home-page = http:
classifier = 
    Environment :: Openstack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    cockcrow

[entry_points]
cockcrow.notification = 

[build_sphinx]

